--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2271,3 +2271,9 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+
+    .picture {
+      max-width: 400px;
+    
+    }
