--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2322,6 +2322,12 @@ button,
       max-width: 400px;
     }
 
+    .mini-logo {
+      max-width: 100px;
+      align: center;
+      image-orientation: center;
+    }
+
 /* Other Style Starts Here */
 
     .buttonbig {
